# openapi/openapi.yaml
@@ -4,14 +4,7 @@ info:
   description: API
   version: 1.0.0
 paths:
-  /tasks/{user_id}:
-    parameters:
-      - name: user_id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: uint
+  /tasks:
     get:
       summary: Get all tasks
       tags:
@@ -108,27 +101,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-  /users/{id}:
+  /users/{userId}:
     parameters:
-      - name: id
+      - name: userId
         in: path
         required: true
         schema:
           type: integer
           format: uint
-    get:
-      summary: Get tasks for user
-      tags:
-        - users
-      responses:
-        '200':
-          description: A list of tasks
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Task'
     patch:
       summary: Update a user
       tags:
@@ -154,6 +134,27 @@ paths:
       responses:
         "204":
           description: User deleted
+  /users/{userId}/tasks:
+    parameters:
+      - name: userId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: uint
+    get:
+      summary: Get tasks for user
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 components:
   schemas:
     Task:
